[package]
name = "elflib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_serde = "1.0.20"
bitflags = "2.4.0"
paste = "1.0.14"
thiserror-no-std = "2.0.2"
elflib_macros = { path = "elflib_macros", version = "0.1.0" }

[features]
std = ["binary_serde/std", "thiserror-no-std/std"]

[workspace]
members = ["elflib_macros"]
