[package]
name = "elflib"
version = "0.1.1"
edition = "2021"
authors = ["Roee Shoshani"]
description = "a library for parsing elf files"
repository = "https://github.com/roeeshoshani/elflib"
license = "MIT"
keywords = ["binary", "deserialization", "parse", "elf", "format"]
categories = ["embedded", "encoding", "no-std", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_serde = "1.0.22"
bitflags = "2.4.0"
paste = "1.0.14"
thiserror-no-std = "2.0.2"
elflib_macros = { path = "elflib_macros", version = "0.1.1" }

[features]
std = ["binary_serde/std", "thiserror-no-std/std"]

[workspace]
members = ["elflib_macros"]
