[package]
name = "elflib_macros"
version = "0.1.3"
edition = "2021"
authors = ["Roee Shoshani"]
description = "a library for parsing elf files"
repository = "https://github.com/roeeshoshani/elflib"
license = "MIT"
keywords = ["binary", "deserialization", "parse", "elf", "format"]
categories = ["embedded", "encoding", "no-std", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full"] }
